refactor: AnimalService의 메서드명들을 더 가독성있게 수정